--- a/pom.xml
+++ b/pom.xml
@@ -94,7 +94,7 @@
           <!-- printFailingErrors is pretty useful -->
           <printFailingErrors>true</printFailingErrors>
           <rulesets>
-            <ruleset>/mnt/e/practice-answer.xml</ruleset>
+            <ruleset>/D:/yihan/2024spring/cs307 softwareEngineering/Teedy/practice-answer.xml</ruleset>
           </rulesets>
         </configuration>
         <executions>
